@@ -4,6 +4,8 @@ New in master
 Features
 --------
 
+* New ``deduplicate_ids``, for preventing duplication of HTML id
+  attributes (Issue #2570)
 * New ``add_header_permalinks`` filter, for Sphinx-style header links
   (Issue #2636)
 
